--- a/src/components/StudentProgress.css
+++ b/src/components/StudentProgress.css
@@ -1,4 +1,4 @@
-.step-container{
+/* .step-container{
     display: flex;
     justify-content: space-between;
 
@@ -31,4 +31,4 @@
     text-align: center;
     margin-bottom: 1.2rem;
     background-color: green;
-}
+} */
