--- a/src/components/TeacherDashboard.css
+++ b/src/components/TeacherDashboard.css
@@ -4,28 +4,32 @@ h1 {
 
 #dashboard {
     background-color: rgb(178, 229, 250);
+    display: flex;
+    flex-direction: column;
+    
 
     padding: 0px;
     margin-top: 50px;
     margin-left: 80px;
-    height: 100vh;
+    height: 80vh;
     width: 92vw;
     position: absolute;
     overflow: hidden;
     font-family: "Source Sans Pro", serif;
+    
 }
 
 #dashboard-inner {
     background-color: rgb(218, 242, 254);
-    height: 85vh;
+    display: flex;
+    
     width: 68vw;
     padding: 20px 20px 20px 20px;
     padding-left: 20%;
     padding-right: -20%;
     margin: 30px 30px 30px 30px;
     border-radius: 3%;
-    display: inline-block;
-    position: relative;
+    
     font-family: "Source Sans Pro", serif;
 }
 
@@ -34,6 +38,7 @@ h1 {
 } */
 
 #button1 {
+    
     background-color: rgb(227, 172, 43);
     float: right;
     margin-right: 10px;
@@ -51,6 +56,7 @@ h1 {
 }
 
 #button2 {
+    
     background-color: rgb(249, 28, 133);
     float: right;
     margin-right: 10px;
@@ -67,6 +73,7 @@ h1 {
 }
 
 #button3 {
+    
     background-color: rgb(68, 192, 246);
     float: right;
     margin-right: 10px;
