--- a/src/components/TeacherDashboard.css
+++ b/src/components/TeacherDashboard.css
@@ -6,7 +6,7 @@ h1 {
     background-color: rgb(178, 229, 250);
     display: flex;
     flex-direction: column;
-    
+    position: absolute;
 
     padding: 0px;
     margin-top: 50px;
