--- a/src/components/StudentProgress.css
+++ b/src/components/StudentProgress.css
@@ -26,7 +26,7 @@
 
 .complete-step{
     border-radius: 80%;
-    border: 1px solid grey;
+    border: 1px solid red;
     width: 30px;
     height: 30px;
     padding: 6px;
