--- a/src/components/StudentProgress.css
+++ b/src/components/StudentProgress.css
@@ -24,21 +24,7 @@
     
 }
 
-.complete-step{
-    border-radius: 80%;
-    border: 1px solid red;
-    width: 30px;
-    height: 30px;
-    padding: 6px;
-    text-align: center;
-    margin-bottom: 1.2rem;
-    font-weight: 600;
-    font-size: 19px;
-    align-items: center;
-    background-color: #99EDCC;
-}
-
-.step{
+.step {
     border-radius: 80%;
     border: 1px solid grey;
     width: 30px;
@@ -50,10 +36,13 @@
     font-size: 19px;
     align-items: center;
     background-color: white;
-    
-    
-    
-}
+   }
+   .completeStep {
+    border: 1px solid black;
+    padding: 6px;
+    margin-bottom: 1.2rem;
+    background-color: #99EDCC;
+   }
 
 
 
