--- a/src/components/StudentProgress.css
+++ b/src/components/StudentProgress.css
@@ -15,7 +15,7 @@
     flex-direction:column;
     align-items: center;
     justify-content: center;
-    width: 23%;
+    /* width: 20%; */
     margin-left: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -27,8 +27,8 @@
 .step {
     border-radius: 80%;
     border: 1px solid grey;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     padding: 0px;
     text-align: center;
     padding: 10px;
@@ -38,10 +38,17 @@
     background-color: white;
    }
    .completeStep {
-    border: 1px solid black;
-    padding: 6px;
-    margin-bottom: 1.2rem;
-    background-color: #99EDCC;
+    border-radius: 80%;
+    border: 1px solid grey;
+    width: 20px;
+    height: 20px;
+    padding: 0px;
+    text-align: center;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 19px;
+    align-items: center;
+    background-color: #99EDCC; 
    }
 
 
@@ -59,9 +66,9 @@
     color: black;
     font-family: 'Open Sans', sans-serif;
     
-    margin-left: 300px;
+    margin-left: 50px;
     margin-top: 10px;
-    margin-right: 200px;
+    margin-right: 80px;
     float: left;
     display: flex;
     flex-direction: column;
