--- a/src/components/AppFooter/AppFooter.css
+++ b/src/components/AppFooter/AppFooter.css
@@ -1,35 +1,34 @@
 .Appfooter {
-  height: 300px;
-  width: 100%;
-  background-color: hsl(198, 88%, 84%);
-  color: #707070;
-  padding-top: 4rem;
-  justify-content: center;
-  display: flex;
+	background-color: #b2e4fa;
+	color: #4b4c4d;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .Footercontent {
-  width: 80%;
-  display: flex;
-  flex-direction: row;
-  margin-left: 10%;
-  justify-content: space-around;
+	width: 80%;
+	display: flex;
+	flex-direction: row;
+	margin-left: 10%;
+	justify-content: space-around;
+	list-style: none;
 }
 
 .footer-heading {
-  display: flex;
-  flex-direction: column;
-  width: 15%;
+	display: flex;
+	flex-direction: column;
+	width: 15%;
 }
 
 .footer-heading h4 {
-  margin-bottom: 4rem;
+	margin-bottom: 4rem;
 }
 
 .footer-heading p {
-  width: 20px;
-  position: fixed;
-  right: 0;
-  text-align: left;
-  width: 20px;
+	/* width: 20px; */
+	/* position: fixed; */
+	right: 0;
+	text-align: left;
+	/* width: 20px; */
 }
